--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/Imagenes/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="node_modules/aos/dist/aos.css" />
     <link rel="stylesheet" href="main.css">
     <title>Unete a nosotras</title>
@@ -312,11 +314,11 @@
   <form class="row g-3 nuestro">
     <div class="col-md-6">
       <label class="form-label">NOMBRE</label>
-      <input type="text" class="form-control" id="nombre">
+      <input type="text" class="form-control" id="nombre" placeholder="Nombre completo">
     </div>
     <div class="col-md-6">
       <label for="correo" class="form-label">CORREO</label>
-      <input type="email" class="form-control" id="correo">
+      <input type="email" class="form-control" id="correo" placeholder="Tucorreo.@gmail.com">
     </div>
     <div class="col-12">
       <label for="ciudad" class="form-label">CIUDAD</label>
@@ -324,7 +326,7 @@
     </div>
     <div class="col-12">
       <label for="msg" class="form-label">MENSAJE</label>
-      <input type="text" class="form-control" id="msg" placeholder="Apartment, studio, or floor">
+      <input type="text" class="form-control" id="msg" placeholder="Escribe aqui tu comentario">
     </div>
       </select>
     </div>
