--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Video -->
         <section class="d-flex justify-content-center align-items-center p-3">
           <div class="position-relative">
-            <video src="Videos/Aca estamos.mp4" class="object-fit-cover"  controls autoplay loop muted data-aos="fade-up"></video>
+            <video src="Videos/Aca estamos.mp4" class="object-fit-cover"  controls autoplay loop data-aos="fade-up"></video>
             <div class="overlay-text">
               <h1>A LA GRAN EXPEREINCIA YANBAL</h1>
             </div>
