--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
       <input type="email" class="form-control" id="correo" placeholder="Tucorreo.@gmail.com">
     </div>
     <div class="col-12">
-      <label for="ciudad" class="form-label">CIUDAD</label>
-      <input type="text" class="form-control" id="ciudad" placeholder="Escribe aqui">
+      <label for="telefono" class="form-label">telefono</label>
+      <input type="text" class="form-control" id="telefono" placeholder="Escribe aqui tu numero de telefono">
     </div>
     <div class="col-12">
       <label for="msg" class="form-label">MENSAJE</label>
@@ -346,6 +346,7 @@
         <script src="scripts/main.js" type="module"></script>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script>
